# ml4h-traq

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  REPLICATION.md  dvc.yaml  metaod_requirements_py3.7.txt  pyproject.toml
.dvc/: config
.github/workflows/: lint.yml
configs/: compass.toml  hipattack.toml  hope3.toml  manage.toml  poise.toml  rely.toml  tips3.toml
data/: raw.dvc
data/derived/: .gitignore
data/diffs/: .gitignore
data/exploded/: .gitignore
traq/: compare_selection.py  compare_unsupervised.py  evaluation.py  format_comparisons.py  grid.py  meta_evaluation.py  metaod_wrapper.py  utils.py
traq/data/: __init__.py  base.py  constants.py  exceptions.py  pickle.py
traq/preprocessing/: __main__.py  config.py  derive_labels.py  diff.py  exceptions.py  spark.py  summarize.py  utils.py
traq/services/: explode_pickles.py  generate_metafeatures.py  metaod_api.py  train_metaod.py  utils.py
